# sote-bote

./: README.md  main.py  pyproject.toml  test_main.py
.claude/: settings.local.json
static/: app.ts  index.html  styles.css
