[project]
name = "sote-bote"
version = "0.1.0"
description = "Transcript summarization and translation service for doctors"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.128.8",
    "pydantic-ai>=1.58.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "httpx>=0.28.1",
]
